# AEF_CONSUMER

./: CMakeLists.txt  README.md  conanfile.txt
documents/: AEF Prototype Notes.docx
src/: CMakeLists.txt  MutexTests.cpp  TimerTests.cpp
